Improve hardware form device class icons.

--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -253,9 +253,11 @@
     <Compile Include="JocysCom\Diagnostics\RawDataLogHttpModule.cs" />
     <Compile Include="JocysCom\Diagnostics\RollingXmlWriterTraceListener.cs" />
     <Compile Include="JocysCom\Diagnostics\TraceHelper.cs" />
+    <Compile Include="JocysCom\Drawing\Basic.cs" />
     <Compile Include="JocysCom\Drawing\Effects\Brightness.cs" />
     <Compile Include="JocysCom\Drawing\Effects\Common.cs" />
     <Compile Include="JocysCom\Drawing\Effects\Grayscale.cs" />
+    <Compile Include="JocysCom\Drawing\Effects\Resize.cs" />
     <Compile Include="JocysCom\Drawing\Effects\Transparent.cs" />
     <Compile Include="JocysCom\Extensions\IQueryable.cs" />
     <Compile Include="JocysCom\Files\Zip.cs" />
