--- a/x360ce.App.Beta/app.config
+++ b/x360ce.App.Beta/app.config
@@ -1,8 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-  </configSections>
-  <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
-  </startup>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup></configuration>
