--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -685,6 +685,8 @@
     <None Include="Images\save_ok_16x16.png" />
     <None Include="Images\save_warning_16x16.png" />
     <None Include="Images\hardware_16x16.png" />
+    <None Include="Images\copy_16x16.png" />
+    <None Include="Images\paste_16x16.png" />
     <Content Include="Images\tip_24x24.png" />
     <None Include="Images\update_16x16.png" />
     <Content Include="Presets\ReadMe.txt" />
