--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -247,6 +247,7 @@
     <Compile Include="Controls\DebugUserControl.Designer.cs">
       <DependentUpon>DebugUserControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\PadControlImager.cs" />
     <Compile Include="Controls\PresetsGridUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -288,6 +289,9 @@
     </Compile>
     <Compile Include="Controls\AxisToButtonUserControl.Designer.cs">
       <DependentUpon>AxisToButtonUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\XboxImageControl.xaml.cs">
+      <DependentUpon>XboxImageControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Forms\BaseFormWithHeader.cs">
       <SubType>Form</SubType>
@@ -746,6 +750,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Controls\XboxImageControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Forms\ErrorReportWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
