--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -229,9 +229,6 @@
     <Compile Include="Common\Vendor.cs" />
     <Compile Include="Common\ControlHelper.cs" />
     <Compile Include="Common\WinVerify.cs" />
-    <Compile Include="Controls\HidGuardianWarningUserControl.xaml.cs">
-      <DependentUpon>HidGuardianWarningUserControl.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Controls\LogUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -295,6 +292,9 @@
     </Compile>
     <Compile Include="Controls\AxisToButtonUserControl.Designer.cs">
       <DependentUpon>AxisToButtonUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\UserKeyboardMapsControl.xaml.cs">
+      <DependentUpon>UserKeyboardMapsControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\XboxImageControl.xaml.cs">
       <DependentUpon>XboxImageControl.xaml</DependentUpon>
@@ -761,7 +761,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Controls\HidGuardianWarningUserControl.xaml">
+    <Page Include="Controls\UserKeyboardMapsControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
